# worker-testing

./: .dockerignore  .envrc.sample  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
apps/: asgi.py  settings.py  urls.py  views.py  wsgi.py
k8s/: resources.yml
scripts/: push_image.bash  setup_k8s.bash
