[tool.poetry]
name = "worker-testing"
version = "0.1.0"
description = ""
authors = ["Yuuki Takahashi <20282867+yktakaha4@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "worker_testing"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"


[tool.poetry.group.dev.dependencies]
black = "^23.9.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
